# trump

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  release-please-config.json
.github/workflows/: release.yml
nix/: flake.nix  package.nix
src/: cli.rs  config.rs  main.rs  repl.rs
