[package]
name = "trump"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
rpassword = "7.4.0"
rustyline = "17.0.2"
ssh2 = "0.9.5"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
