[package]
name = "trump"
version = "0.3.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
rpassword = "7.4.0"
rustyline = "17.0.2"
ssh2 = "0.9.5"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
aes-gcm = "0.10.3"
rand = "0.9.2"
base64 = "0.22.1"
dirs = "6.0.0"
colored = "3.1.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
